--- a/src/styles/theme/_dark-gray.scss
+++ b/src/styles/theme/_dark-gray.scss
@@ -1,1 +1,9 @@
 $text-color: gray;
+
+@mixin list {
+  background: darkcyan;
+  line-height: 24px;
+  font-size: 16px;
+  border-radius: 5px;
+  margin:10px;
+}
