--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,11 +8,16 @@
 }
 
 
+.dark-blue {
+  @import "element-variables-dark-blue.scss";
+}
 
-// .dark-blue {
-//   color: dark-blue.$text-color;
-// }
+.dark-gray {
+  @import "element-variables-dark-gray.scss";
+}
 
-// .dark-gray {
-//   color: dark-gray.$text-color;
-// }
+// @import "element-variables.scss";
+/* 改变 icon 字体路径变量，必需 */
+// $--font-path: '~element-ui/lib/theme-chalk/fonts';
+
+// @import "~element-ui/packages/theme-chalk/src/index";
