--- a/src/styles/theme/_dark-gray.scss
+++ b/src/styles/theme/_dark-gray.scss
@@ -1,7 +1,7 @@
-$text-color: gray;
+$text-color: darkcyan;
 
 @mixin list {
-  background: darkcyan;
+  background: $text-color;
   line-height: 24px;
   font-size: 16px;
   border-radius: 5px;
